fix screenshot spacing

--- a/2023styles.css
+++ b/2023styles.css
@@ -190,7 +190,7 @@ crown {
     text-align: center; 
     overflow-x: scroll; 
     white-space: nowrap;
-    padding: 0 30px;
+    padding: 15px;
     box-sizing: border-box;
 }
 
@@ -198,8 +198,10 @@ crown {
     text-decoration: none;
 }
 
-.screenshotArea::-webkit-scrollbar {
-    display: none;
+.screenshotArea img {
+    max-height: 500px; 
+    margin: 15px; 
+    border-radius: 20px;
 }
 
 @media (max-width: 700px) {
